edited news page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abbra-Cadabra</title>
+    <title>Apple-Genius сервисный центр </title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Jura:300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet">
@@ -17,13 +17,13 @@
     <header>
         <div class="head">
             <img src="images/apple_jobs_logo.png" alt="Logo">
-            <a href="index.html">Abbra-Cadabra</a>
+            <a href="index.html">Apple-Genius</a>
             <ul class="cont-phones">
                 <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
                 <li><img src="images/vodafone_logo.png" alt="vodafone">+38(066)187-80-30</li>
             </ul>
             <ul class="address">
-                <li>Kyiv, V.Vasylkivska str. 28</li>
+                <li><a href="contacts.html">Kyiv, V.Vasylkivska str. 28</a></li>
                 <li><a href="mailto:abbra-cadabra@gmail.com">abbra-cadabra@gmail.com</a></li>
             </ul>
         </div>
