--- a/news.html
+++ b/news.html
@@ -16,7 +16,7 @@
     <header>
         <div class="head">
             <img src="images/apple_jobs_logo.png" alt="Logo">
-            <a href="index.html">Abbra-Cadabra</a>
+            <a href="index.html">Apple-Genius</a>
             <ul class="cont-phones">
                 <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
                 <li><img src="images/vodafone_logo.png" alt="vodafone">+38(066)187-80-30</li>
@@ -69,93 +69,77 @@
 
     <main>
         <div class="news-container">
-            <div class="news-item">
-                <img src="images/news_image1.jpg" alt="">
-                <h2>Назван самый продаваемый смартфон 2019 года (спойлер: это старый iPhone)</h2>
-                <p>Аналитическая компания Omdia подсчитала, сколько и какие смартфоны покупали в мире в прошлом году, и определила самую популярную модель 2019 года.</p>
-                <h3>Кто в лидерах</h3>
-                <p>Итак, самым продаваемым оказался iPhone XR 2018 года выпуска: Apple продала за 12 месяцев 46,3 млн единиц. Актуальный iPhone 11 занял второе место с разрывом в 9 миллионов — 37,3 млн проданных устройств.</p>
-                <p>Следующую тройку лидеров заняла компания Samsung, причем на третьем, четвертом и пятом месте — доступные модели. Это Galaxy A10 (30,3 млн единиц), Galaxy A50 (24,2 млн единиц) и Galaxy A20 (19,2 млн единиц).</p>
-                <p>Также в списке iPhone 11 Pro Max (17,6 млн), iPhone 8 (17,4 млн), iPhone 11 Pro (15,5 млн), Galaxy J2 Core (15,2 млн) и лишь один представитель Xiaomi — Redmi Note 7 (16,4 млн).</p>
+            <div class="apple-news">Новости Apple
+                <div class="news-item">
+                    <img src="images/news_image1.jpg" alt="">
+                    <h2>Назван самый продаваемый смартфон 2019 года (спойлер: это старый iPhone)</h2>
+                    <p>Аналитическая компания Omdia подсчитала, сколько и какие смартфоны покупали в мире в прошлом году, и определила самую популярную модель 2019 года.</p>
+                    <h3>Кто в лидерах</h3>
+                    <p>Итак, самым продаваемым оказался iPhone XR 2018 года выпуска: Apple продала за 12 месяцев 46,3 млн единиц. Актуальный iPhone 11 занял второе место с разрывом в 9 миллионов — 37,3 млн проданных устройств.</p>
+                    <p>Следующую тройку лидеров заняла компания Samsung, причем на третьем, четвертом и пятом месте — доступные модели. Это Galaxy A10 (30,3 млн единиц), Galaxy A50 (24,2 млн единиц) и Galaxy A20 (19,2 млн единиц).</p>
+                    <p>Также в списке iPhone 11 Pro Max (17,6 млн), iPhone 8 (17,4 млн), iPhone 11 Pro (15,5 млн), Galaxy J2 Core (15,2 млн) и лишь один представитель Xiaomi — Redmi Note 7 (16,4 млн).</p>
+                </div>
+                <div class="news-item">
+                    <img src="images/news_image2.jpg" alt="">
+                    <h2>Apple все-таки заставят отказаться от Lightning</h2>
+                    <p>Европейский парламент принял резолюцию, которая призывает к «обязательному введению общих зарядных устройств для всех мобильных устройств».</p>
+                    <h3>Что это значит</h3>
+                    <p>Еврокомиссия, высший орган исполнительной власти Европейского союза, уже давно хочет ввести для производителей электроники в Европе единый стандарт зарядных устройств. Она склоняется к USB-С, на который уже перешли многие Android-устройства.</p>
+                    <p>Это значит, что компании могут обязать использовать только USB-С и отказаться от micro-USB и Lightning (в случае Apple).
+                    </p>
+                    <p>Таким образом в Европе решили бороться с электронными отходами: с единым стандартом людям не придется покупать разные зарядные устройства для гаджетов, в результате выброшенных кабелей станет меньше. Хотя Apple уверяет в обратном: отходов станет больше, когда ее пользователи начнут выбрасывать зарядки с Lightning-разъемами.</p>
+                    <p>Кстати, сейчас на каждого человека приходится около 6 килограммов электронных отходов в год.</p>
+                    <p>Кроме того, Европарламент призвал улучшить средства для переработки кабелей и совместимость с беспроводными зарядными устройствами.</p>
+                    <p>Соответствующий законопроект должны разработать и рассмотреть к июлю, поэтому пока у производителей еще есть время.</p>
+                </div>
             </div>
-            <div class="news-item">
-                <img src="images/news_image2.jpg" alt="">
-                <h2>Apple все-таки заставят отказаться от Lightning</h2>
-                <p>Европейский парламент принял резолюцию, которая призывает к «обязательному введению общих зарядных устройств для всех мобильных устройств».</p>
-                <h3>Что это значит</h3>
-                <p>Еврокомиссия, высший орган исполнительной власти Европейского союза, уже давно хочет ввести для производителей электроники в Европе единый стандарт зарядных устройств. Она склоняется к USB-С, на который уже перешли многие Android-устройства.</p>
-                <p>Это значит, что компании могут обязать использовать только USB-С и отказаться от micro-USB и Lightning (в случае Apple).
-                </p>
-                <p>Таким образом в Европе решили бороться с электронными отходами: с единым стандартом людям не придется покупать разные зарядные устройства для гаджетов, в результате выброшенных кабелей станет меньше. Хотя Apple уверяет в обратном: отходов станет больше, когда ее пользователи начнут выбрасывать зарядки с Lightning-разъемами.</p>
-                <p>Кстати, сейчас на каждого человека приходится около 6 килограммов электронных отходов в год.</p>
-                <p>Кроме того, Европарламент призвал улучшить средства для переработки кабелей и совместимость с беспроводными зарядными устройствами.</p>
-                <p>Соответствующий законопроект должны разработать и рассмотреть к июлю, поэтому пока у производителей еще есть время.</p>
+            <div class="it-news">IT новости
+                <div class="news-item">
+                    <img src="images/news_image1.jpg" alt="">
+                    <h2>Назван самый продаваемый смартфон 2019 года (спойлер: это старый iPhone)</h2>
+                    <p>Аналитическая компания Omdia подсчитала, сколько и какие смартфоны покупали в мире в прошлом году, и определила самую популярную модель 2019 года.</p>
+                    <h3>Кто в лидерах</h3>
+                    <p>Итак, самым продаваемым оказался iPhone XR 2018 года выпуска: Apple продала за 12 месяцев 46,3 млн единиц. Актуальный iPhone 11 занял второе место с разрывом в 9 миллионов — 37,3 млн проданных устройств.</p>
+                    <p>Следующую тройку лидеров заняла компания Samsung, причем на третьем, четвертом и пятом месте — доступные модели. Это Galaxy A10 (30,3 млн единиц), Galaxy A50 (24,2 млн единиц) и Galaxy A20 (19,2 млн единиц).</p>
+                    <p>Также в списке iPhone 11 Pro Max (17,6 млн), iPhone 8 (17,4 млн), iPhone 11 Pro (15,5 млн), Galaxy J2 Core (15,2 млн) и лишь один представитель Xiaomi — Redmi Note 7 (16,4 млн).</p>
+                </div>
+                <div class="news-item">
+                    <img src="images/news_image2.jpg" alt="">
+                    <h2>Apple все-таки заставят отказаться от Lightning</h2>
+                    <p>Европейский парламент принял резолюцию, которая призывает к «обязательному введению общих зарядных устройств для всех мобильных устройств».</p>
+                    <h3>Что это значит</h3>
+                    <p>Еврокомиссия, высший орган исполнительной власти Европейского союза, уже давно хочет ввести для производителей электроники в Европе единый стандарт зарядных устройств. Она склоняется к USB-С, на который уже перешли многие Android-устройства.</p>
+                    <p>Это значит, что компании могут обязать использовать только USB-С и отказаться от micro-USB и Lightning (в случае Apple).
+                    </p>
+                    <p>Таким образом в Европе решили бороться с электронными отходами: с единым стандартом людям не придется покупать разные зарядные устройства для гаджетов, в результате выброшенных кабелей станет меньше. Хотя Apple уверяет в обратном: отходов станет больше, когда ее пользователи начнут выбрасывать зарядки с Lightning-разъемами.</p>
+                    <p>Кстати, сейчас на каждого человека приходится около 6 килограммов электронных отходов в год.</p>
+                    <p>Кроме того, Европарламент призвал улучшить средства для переработки кабелей и совместимость с беспроводными зарядными устройствами.</p>
+                    <p>Соответствующий законопроект должны разработать и рассмотреть к июлю, поэтому пока у производителей еще есть время.</p>
+                </div>
             </div>
-            <div class="news-item">
-                <img src="images/news_image1.jpg" alt="">
-                <h2>Назван самый продаваемый смартфон 2019 года (спойлер: это старый iPhone)</h2>
-                <p>Аналитическая компания Omdia подсчитала, сколько и какие смартфоны покупали в мире в прошлом году, и определила самую популярную модель 2019 года.</p>
-                <h3>Кто в лидерах</h3>
-                <p>Итак, самым продаваемым оказался iPhone XR 2018 года выпуска: Apple продала за 12 месяцев 46,3 млн единиц. Актуальный iPhone 11 занял второе место с разрывом в 9 миллионов — 37,3 млн проданных устройств.</p>
-                <p>Следующую тройку лидеров заняла компания Samsung, причем на третьем, четвертом и пятом месте — доступные модели. Это Galaxy A10 (30,3 млн единиц), Galaxy A50 (24,2 млн единиц) и Galaxy A20 (19,2 млн единиц).</p>
-                <p>Также в списке iPhone 11 Pro Max (17,6 млн), iPhone 8 (17,4 млн), iPhone 11 Pro (15,5 млн), Galaxy J2 Core (15,2 млн) и лишь один представитель Xiaomi — Redmi Note 7 (16,4 млн).</p>
-            </div>
-            <div class="news-item">
-                <img src="images/news_image2.jpg" alt="">
-                <h2>Apple все-таки заставят отказаться от Lightning</h2>
-                <p>Европейский парламент принял резолюцию, которая призывает к «обязательному введению общих зарядных устройств для всех мобильных устройств».</p>
-                <h3>Что это значит</h3>
-                <p>Еврокомиссия, высший орган исполнительной власти Европейского союза, уже давно хочет ввести для производителей электроники в Европе единый стандарт зарядных устройств. Она склоняется к USB-С, на который уже перешли многие Android-устройства.</p>
-                <p>Это значит, что компании могут обязать использовать только USB-С и отказаться от micro-USB и Lightning (в случае Apple).
-                </p>
-                <p>Таким образом в Европе решили бороться с электронными отходами: с единым стандартом людям не придется покупать разные зарядные устройства для гаджетов, в результате выброшенных кабелей станет меньше. Хотя Apple уверяет в обратном: отходов станет больше, когда ее пользователи начнут выбрасывать зарядки с Lightning-разъемами.</p>
-                <p>Кстати, сейчас на каждого человека приходится около 6 килограммов электронных отходов в год.</p>
-                <p>Кроме того, Европарламент призвал улучшить средства для переработки кабелей и совместимость с беспроводными зарядными устройствами.</p>
-                <p>Соответствующий законопроект должны разработать и рассмотреть к июлю, поэтому пока у производителей еще есть время.</p>
-            </div>
-            <div class="news-item">
-                <img src="images/news_image1.jpg" alt="">
-                <h2>Назван самый продаваемый смартфон 2019 года (спойлер: это старый iPhone)</h2>
-                <p>Аналитическая компания Omdia подсчитала, сколько и какие смартфоны покупали в мире в прошлом году, и определила самую популярную модель 2019 года.</p>
-                <h3>Кто в лидерах</h3>
-                <p>Итак, самым продаваемым оказался iPhone XR 2018 года выпуска: Apple продала за 12 месяцев 46,3 млн единиц. Актуальный iPhone 11 занял второе место с разрывом в 9 миллионов — 37,3 млн проданных устройств.</p>
-                <p>Следующую тройку лидеров заняла компания Samsung, причем на третьем, четвертом и пятом месте — доступные модели. Это Galaxy A10 (30,3 млн единиц), Galaxy A50 (24,2 млн единиц) и Galaxy A20 (19,2 млн единиц).</p>
-                <p>Также в списке iPhone 11 Pro Max (17,6 млн), iPhone 8 (17,4 млн), iPhone 11 Pro (15,5 млн), Galaxy J2 Core (15,2 млн) и лишь один представитель Xiaomi — Redmi Note 7 (16,4 млн).</p>
-            </div>
-            <div class="news-item">
-                <img src="images/news_image2.jpg" alt="">
-                <h2>Apple все-таки заставят отказаться от Lightning</h2>
-                <p>Европейский парламент принял резолюцию, которая призывает к «обязательному введению общих зарядных устройств для всех мобильных устройств».</p>
-                <h3>Что это значит</h3>
-                <p>Еврокомиссия, высший орган исполнительной власти Европейского союза, уже давно хочет ввести для производителей электроники в Европе единый стандарт зарядных устройств. Она склоняется к USB-С, на который уже перешли многие Android-устройства.</p>
-                <p>Это значит, что компании могут обязать использовать только USB-С и отказаться от micro-USB и Lightning (в случае Apple).
-                </p>
-                <p>Таким образом в Европе решили бороться с электронными отходами: с единым стандартом людям не придется покупать разные зарядные устройства для гаджетов, в результате выброшенных кабелей станет меньше. Хотя Apple уверяет в обратном: отходов станет больше, когда ее пользователи начнут выбрасывать зарядки с Lightning-разъемами.</p>
-                <p>Кстати, сейчас на каждого человека приходится около 6 килограммов электронных отходов в год.</p>
-                <p>Кроме того, Европарламент призвал улучшить средства для переработки кабелей и совместимость с беспроводными зарядными устройствами.</p>
-                <p>Соответствующий законопроект должны разработать и рассмотреть к июлю, поэтому пока у производителей еще есть время.</p>
-            </div>
-            <div class="news-item">
-                <img src="images/news_image1.jpg" alt="">
-                <h2>Назван самый продаваемый смартфон 2019 года (спойлер: это старый iPhone)</h2>
-                <p>Аналитическая компания Omdia подсчитала, сколько и какие смартфоны покупали в мире в прошлом году, и определила самую популярную модель 2019 года.</p>
-                <h3>Кто в лидерах</h3>
-                <p>Итак, самым продаваемым оказался iPhone XR 2018 года выпуска: Apple продала за 12 месяцев 46,3 млн единиц. Актуальный iPhone 11 занял второе место с разрывом в 9 миллионов — 37,3 млн проданных устройств.</p>
-                <p>Следующую тройку лидеров заняла компания Samsung, причем на третьем, четвертом и пятом месте — доступные модели. Это Galaxy A10 (30,3 млн единиц), Galaxy A50 (24,2 млн единиц) и Galaxy A20 (19,2 млн единиц).</p>
-                <p>Также в списке iPhone 11 Pro Max (17,6 млн), iPhone 8 (17,4 млн), iPhone 11 Pro (15,5 млн), Galaxy J2 Core (15,2 млн) и лишь один представитель Xiaomi — Redmi Note 7 (16,4 млн).</p>
-            </div>
-            <div class="news-item">
-                <img src="images/news_image2.jpg" alt="">
-                <h2>Apple все-таки заставят отказаться от Lightning</h2>
-                <p>Европейский парламент принял резолюцию, которая призывает к «обязательному введению общих зарядных устройств для всех мобильных устройств».</p>
-                <h3>Что это значит</h3>
-                <p>Еврокомиссия, высший орган исполнительной власти Европейского союза, уже давно хочет ввести для производителей электроники в Европе единый стандарт зарядных устройств. Она склоняется к USB-С, на который уже перешли многие Android-устройства.</p>
-                <p>Это значит, что компании могут обязать использовать только USB-С и отказаться от micro-USB и Lightning (в случае Apple).
-                </p>
-                <p>Таким образом в Европе решили бороться с электронными отходами: с единым стандартом людям не придется покупать разные зарядные устройства для гаджетов, в результате выброшенных кабелей станет меньше. Хотя Apple уверяет в обратном: отходов станет больше, когда ее пользователи начнут выбрасывать зарядки с Lightning-разъемами.</p>
-                <p>Кстати, сейчас на каждого человека приходится около 6 килограммов электронных отходов в год.</p>
-                <p>Кроме того, Европарламент призвал улучшить средства для переработки кабелей и совместимость с беспроводными зарядными устройствами.</p>
-                <p>Соответствующий законопроект должны разработать и рассмотреть к июлю, поэтому пока у производителей еще есть время.</p>
+            <div class="gadget-news">Новое в Gadget мире
+                <div class="news-item">
+                    <img src="images/news_image1.jpg" alt="">
+                    <h2>Назван самый продаваемый смартфон 2019 года (спойлер: это старый iPhone)</h2>
+                    <p>Аналитическая компания Omdia подсчитала, сколько и какие смартфоны покупали в мире в прошлом году, и определила самую популярную модель 2019 года.</p>
+                    <h3>Кто в лидерах</h3>
+                    <p>Итак, самым продаваемым оказался iPhone XR 2018 года выпуска: Apple продала за 12 месяцев 46,3 млн единиц. Актуальный iPhone 11 занял второе место с разрывом в 9 миллионов — 37,3 млн проданных устройств.</p>
+                    <p>Следующую тройку лидеров заняла компания Samsung, причем на третьем, четвертом и пятом месте — доступные модели. Это Galaxy A10 (30,3 млн единиц), Galaxy A50 (24,2 млн единиц) и Galaxy A20 (19,2 млн единиц).</p>
+                    <p>Также в списке iPhone 11 Pro Max (17,6 млн), iPhone 8 (17,4 млн), iPhone 11 Pro (15,5 млн), Galaxy J2 Core (15,2 млн) и лишь один представитель Xiaomi — Redmi Note 7 (16,4 млн).</p>
+                </div>
+                <div class="news-item">
+                    <img src="images/news_image2.jpg" alt="">
+                    <h2>Apple все-таки заставят отказаться от Lightning</h2>
+                    <p>Европейский парламент принял резолюцию, которая призывает к «обязательному введению общих зарядных устройств для всех мобильных устройств».</p>
+                    <h3>Что это значит</h3>
+                    <p>Еврокомиссия, высший орган исполнительной власти Европейского союза, уже давно хочет ввести для производителей электроники в Европе единый стандарт зарядных устройств. Она склоняется к USB-С, на который уже перешли многие Android-устройства.</p>
+                    <p>Это значит, что компании могут обязать использовать только USB-С и отказаться от micro-USB и Lightning (в случае Apple).
+                    </p>
+                    <p>Таким образом в Европе решили бороться с электронными отходами: с единым стандартом людям не придется покупать разные зарядные устройства для гаджетов, в результате выброшенных кабелей станет меньше. Хотя Apple уверяет в обратном: отходов станет больше, когда ее пользователи начнут выбрасывать зарядки с Lightning-разъемами.</p>
+                    <p>Кстати, сейчас на каждого человека приходится около 6 килограммов электронных отходов в год.</p>
+                    <p>Кроме того, Европарламент призвал улучшить средства для переработки кабелей и совместимость с беспроводными зарядными устройствами.</p>
+                    <p>Соответствующий законопроект должны разработать и рассмотреть к июлю, поэтому пока у производителей еще есть время.</p>
+                </div>
             </div>
         </div>
     </main>
