--- a/repair-apple-iphone.html
+++ b/repair-apple-iphone.html
@@ -16,7 +16,7 @@
     <header>
         <div class="head">
             <img src="images/apple_jobs_logo.png" alt="Logo">
-            <a href="index.html">Abbra-Cadabra</a>
+            <a href="index.html">Apple-Genius</a>
             <ul class="cont-phones">
                 <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
                 <li><img src="images/vodafone_logo.png" alt="vodafone">+38(066)187-80-30</li>
@@ -199,7 +199,7 @@
                 <div class="power_breakdown">
                     <img src="images/brokes/power.png" alt="">Не включается
                     <div class="power_description">
-                        Если не включается, то...
+                        Если не включается, то...Если не включается, то...
                     </div>
                 </div>
                 <div class="charge_breakdown">
@@ -230,6 +230,60 @@
                     <img src="images/brokes/display.png" alt="">Не работает дисплей
                     <div class="display_description">
                         Если не работает дисплей, то...Если не работает дисплей, то...
+                    </div>
+                </div>
+                <div class="touch_breakdown">
+                    <img src="images/brokes/touch.png" alt="">Не работает touch screen
+                    <div class="touch_description">
+                        Если Не работает touch screen, то...Если Не работает touch screen, то...
+                    </div>
+                </div>
+                <div class="body_breakdown">
+                    <img src="images/brokes/body.png" alt="">Поцарапался корпус
+                    <div class="body_description">
+                        Если Поцарапался корпус, то...Если Поцарапался корпус, то...
+                    </div>
+                </div>
+                <div class="speaker_breakdown">
+                    <img src="images/brokes/speaker.png" alt="">Не работает звук
+                    <div class="speaker_description">
+                        Если Не работает звук, то...Если Не работает звук, то...
+                    </div>
+                </div>
+                <div class="mic_breakdown">
+                    <img src="images/brokes/mic.png" alt="">Не работает микрофон
+                    <div class="mic_description">
+                        Если Не работает микрофон, то...Если Не работает микрофон, то...
+                    </div>
+                </div>
+                <div class="home_breakdown">
+                    <img src="images/brokes/home.png" alt="">Не работают кнопки
+                    <div class="home_description">
+                        Если Не работают кнопки, то...Если Не работают кнопки, то...
+                    </div>
+                </div>
+                <div class="camera_breakdown">
+                    <img src="images/brokes/camera.png" alt="">Не рабоает камера
+                    <div class="camera_description">
+                        Если Не рабоает камера, то...Если Не рабоает камера, то...
+                    </div>
+                </div>
+                <div class="cell_breakdown">
+                    <img src="images/brokes/cell.png" alt="">Не ловит сеть
+                    <div class="cell_description">
+                        Если Не ловит сеть, то...Если Не ловит сеть, то...
+                    </div>
+                </div>
+                <div class="wifi_breakdown">
+                    <img src="images/brokes/wifi.png" alt="">Не работает Wi-Fi
+                    <div class="wifi_description">
+                        Если Не работает Wi-Fi, то...Если Не работает Wi-Fi, то...
+                    </div>
+                </div>
+                <div class="itunes_breakdown">
+                    <img src="images/brokes/itunes.png" alt="">Требует iTunes
+                    <div class="itunes_description">
+                        Если Требует iTunes, то...Если Требует iTunes, то...
                     </div>
                 </div>
 <!-- 
