--- a/iphone-6s.html
+++ b/iphone-6s.html
@@ -16,7 +16,7 @@
     <header>
         <div class="head">
             <img src="images/apple_jobs_logo.png" alt="Logo">
-            <a href="index.html">Abbra-Cadabra</a>
+            <a href="index.html">Apple-Genius</a>
             <ul class="cont-phones">
                 <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
                 <li><img src="images/vodafone_logo.png" alt="vodafone">+38(066)187-80-30</li>
