added ipad pages

--- a/news.html
+++ b/news.html
@@ -15,7 +15,7 @@
     
     <header>
         <div class="head">
-            <img src="images/apple_jobs_logo.png" alt="Logo">
+            <a href="index.html"><img src="images/apple_jobs_logo.png" alt="Logo"></a>
             <a href="index.html">Apple-Genius</a>
             <ul class="cont-phones">
                 <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
@@ -33,8 +33,8 @@
                     <ul class="sub-menu-repair">
                         <li><a href="/">Apple</a>
                             <ul class="repair-apple">
-                                <li><a href="/">iPhone</a></li>
-                                <li><a href="/">iPad</a></li>
+                                <li><a href="repair-apple-iphone.html">iPhone</a></li>
+                                <li><a href="repair-apple-ipad.html">iPad</a></li>
                                 <li><a href="/">Watch</a></li>
                                 <li><a href="/">MacBook</a></li>
                             </ul>
