--- a/contacts.html
+++ b/contacts.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="head">
-            <img src="images/apple_jobs_logo.png" alt="Logo">
+            <a href="index.html"><img src="images/apple_jobs_logo.png" alt="Logo"></a>
             <a href="index.html">Apple-Genius</a>
             <ul class="cont-phones">
                 <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
