--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apple-Genius сервисный центр </title>
+    <title>Сервисный центр Apple-Genius</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Jura:300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet">
@@ -14,7 +14,7 @@
 
     <header>
         <div class="head">
-            <img src="images/apple_jobs_logo.png" alt="Logo">
+            <a href="index.html"><img src="images/apple_jobs_logo.png" alt="Logo"></a>
             <a href="index.html">Apple-Genius</a>
             <ul class="cont-phones">
                 <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
@@ -33,7 +33,7 @@
                         <li><a href="repair-apple.html">Apple</a>
                             <ul class="repair-apple">
                                 <li><a href="repair-apple-iphone.html">iPhone</a></li>
-                                <li><a href="#">iPad</a></li>
+                                <li><a href="repair-apple-ipad.html">iPad</a></li>
                                 <li><a href="#">Watch</a></li>
                                 <li><a href="#">MacBook</a></li>
                             </ul>
