--- a/repair-apple-ipad.html
+++ b/repair-apple-ipad.html
@@ -6,7 +6,7 @@
     <title>Ремонт iPad</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="repair-apple-iphone.css">
+    <link rel="stylesheet" type="text/css" href="repair-apple-ipad.css">
     <link href="https://fonts.googleapis.com/css?family=Jura:300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="slider.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
@@ -15,7 +15,7 @@
     
     <header>
         <div class="head">
-            <img src="images/apple_jobs_logo.png" alt="Logo">
+            <a href="index.html"><img src="images/apple_jobs_logo.png" alt="Logo"></a>
             <a href="index.html">Apple-Genius</a>
             <ul class="cont-phones">
                 <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
@@ -71,22 +71,40 @@
         <h1>Ремонт iPad</h1>
         <h2>для более подробной информации, выберите модель:</h2>
         <div class="repair_apple_ipad">
-            <div class="ipad_1">
-                <a href="ipad_1.html">
-                    <div class="ipad_1_img"></div>
-                    iPad
+            <div class="ipad_air_2">
+                <a href="ipad_air_2.html">
+                    <div class="ipad_air_2_img"></div>
+                    iPad Air 2
                 </a>
             </div>
-            <div class="ipad_2">
-                <a href="ipad_2.html">
-                    <div class="ipad_2_img"></div>
-                    iPad 2
+            <div class="ipad_air">
+                <a href="ipad_air.html">
+                    <div class="ipad_air_img"></div>
+                    iPad Air
                 </a>
             </div>
-            <div class="ipad_3">
-                <a href="ipad_3.html">
-                    <div class="ipad_3_img"></div>
-                    iPad 3
+            <div class="ipad_mini_4">
+                <a href="ipad_mini_4.html">
+                    <div class="ipad_mini_4_img"></div>
+                    iPad mini 4
+                </a>
+            </div>
+            <div class="ipad_mini_3">
+                <a href="ipad_mini_3.html">
+                    <div class="ipad_mini_3_img"></div>
+                    iPad mini 3
+                </a>
+            </div>
+            <div class="ipad_mini_2">
+                <a href="ipad_mini_2.html">
+                    <div class="ipad_mini_2_img"></div>
+                    iPad mini 2
+                </a>
+            </div>
+            <div class="ipad_mini">
+                <a href="ipad_mini.html">
+                    <div class="ipad_mini_img"></div>
+                    iPad mini
                 </a>
             </div>
             <div class="ipad_4">
@@ -95,6 +113,27 @@
                     iPad 4
                 </a>
             </div>
+            <div class="ipad_3">
+                <a href="ipad_3.html">
+                    <div class="ipad_3_img"></div>
+                    iPad 3
+                </a>
+            </div>
+            <div class="ipad_2">
+                <a href="ipad_2.html">
+                    <div class="ipad_2_img"></div>
+                    iPad 2
+                </a>
+            </div>
+            <div class="ipad_1">
+                <a href="ipad_1.html">
+                    <div class="ipad_1_img"></div>
+                    iPad
+                </a>
+            </div>
+
+
+
         </div>
         <div class="popular_breakdowns">
             <h1>Наиболее порулярные неисправности:</h1>
