--- a/repair-apple.html
+++ b/repair-apple.html
@@ -15,7 +15,7 @@
     
     <header>
         <div class="head">
-            <img src="images/apple_jobs_logo.png" alt="Logo">
+            <a href="index.html"><img src="images/apple_jobs_logo.png" alt="Logo"></a>
             <a href="index.html">Apple-Genius</a>
             <ul class="cont-phones">
                 <li><img src="images/lifecell_logo.png" alt="lifecell">+38(063)149-26-27</li>
@@ -34,7 +34,7 @@
                         <li><a href="repair-apple.html">Apple</a>
                             <ul class="repair-apple">
                                 <li><a href="repair-apple-iphone.html">iPhone</a></li>
-                                <li><a href="/">iPad</a></li>
+                                <li><a href="repair-apple-ipad.html">iPad</a></li>
                                 <li><a href="/">Watch</a></li>
                                 <li><a href="/">MacBook</a></li>
                             </ul>
@@ -76,7 +76,7 @@
                     </a>
                 </div>
                 <div class="repair_ipad">
-                    <a href="#">
+                    <a href="repair-apple-ipad.html">
                         <div class="repair_ipad_img"></div>
                         iPad
                     </a>
