added watch pages

--- a/repair-apple-ipad.html
+++ b/repair-apple-ipad.html
@@ -35,7 +35,7 @@
                             <ul class="repair-apple">
                                 <li><a href="repair-apple-iphone.html">iPhone</a></li>
                                 <li><a href="repair-apple-ipad.html">iPad</a></li>
-                                <li><a href="#">Watch</a></li>
+                                <li><a href="repair-apple-watch.html">Watch</a></li>
                                 <li><a href="#">MacBook</a></li>
                             </ul>
                         </li>
@@ -44,7 +44,7 @@
                 </li>
                 <li><a href="#">Устройства</a></li>
                 <li><a href="#">Аксессуары</a></li>
-                <li><a href="#">Новости и акции</a></li>
+                <li><a href="news.html">Новости и акции</a></li>
                 <li><span>Контакты</span>
                     <ul class="sub-menu-cont">
                         <li>
@@ -131,9 +131,6 @@
                     iPad
                 </a>
             </div>
-
-
-
         </div>
         <div class="popular_breakdowns">
             <h1>Наиболее порулярные неисправности:</h1>
