--- a/repair-apple-watch.html
+++ b/repair-apple-watch.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ремонт iPhone</title>
+    <title>Ремонт Apple Watch</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="repair-apple-iphone.css">
+    <link rel="stylesheet" type="text/css" href="repair-apple-watch.css">
     <link href="https://fonts.googleapis.com/css?family=Jura:300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="slider.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
@@ -44,7 +44,7 @@
                 </li>
                 <li><a href="#">Устройства</a></li>
                 <li><a href="#">Аксессуары</a></li>
-                <li><a href="#">Новости и акции</a></li>
+                <li><a href="news.html">Новости и акции</a></li>
                 <li><span>Контакты</span>
                     <ul class="sub-menu-cont">
                         <li>
@@ -68,127 +68,37 @@
     </header>
 
     <main>
-        <h1>Ремонт iPhone</h1>
+        <h1>Ремонт Apple Watch</h1>
         <h2>для более подробной информации, выберите модель:</h2>
-        <div class="repair_apple_iphone">
-            <div class="iphone_11_pro_max">
-                <a href="iphone-11-pro-max.html">
-                    <div class="iphone_11_pro_max_img"></div>
-                    iPhone 11 Pro Max
+        <div class="repair_apple_watch">
+            <div class="watch_5">
+                <a href="watch-5.html">
+                    <div class="watch_5_img"></div>
+                    Apple Watch series 5
                 </a>
             </div>
-            <div class="iphone_11_pro">
-                <a href="iphone-11-pro.html">
-                    <div class="iphone_11_pro_img"></div>
-                    iPhone 11 Pro
-                </a>
-            </div>                
-            <div class="iphone_11">
-                <a href="iphone-11.html">
-                    <div class="iphone_11_img"></div>
-                    iPhone 11
-                </a>
-            </div>                
-            <div class="iphone_xs_max">
-                <a href="iphone-xs-max.html">
-                    <div class="iphone_xs_max_img"></div>
-                    iPhone XS Max
+            <div class="watch_4">
+                <a href="watch-4.html">
+                    <div class="watch_4_img"></div>
+                    Apple Watch series 4
                 </a>
             </div>
-            <div class="iphone_xs">
-                <a href="iphone-xs.html">
-                    <div class="iphone_xs_img"></div>
-                    iPhone XS
+            <div class="watch_3">
+                <a href="watch-3.html">
+                    <div class="watch_3_img"></div>
+                    Apple Watch series 3
                 </a>
             </div>
-            <div class="iphone_xr">
-                <a href="iphone-xr.html">
-                    <div class="iphone_xr_img"></div>
-                    iPhone XR
+            <div class="watch_2">
+                <a href="watch-2.html">
+                    <div class="watch_2_img"></div>
+                    Apple Watch series 2
                 </a>
             </div>
-            <div class="iphone_x">
-                <a href="iphone-x.html">
-                    <div class="iphone_x_img"></div>
-                    iPhone X
-                </a>
-            </div>                
-            <div class="iphone_8_plus">
-                <a href="iphone-8-plus.html">
-                    <div class="iphone_8_plus_img"></div>
-                    iPhone 8 Plus
-                </a>
-            </div>                
-            <div class="iphone_8">
-                <a href="iphone-8.html">
-                    <div class="iphone_8_img"></div>
-                    iPhone 8
-                </a>
-            </div>
-            <div class="iphone_7_plus">
-                <a href="iphone-7-plus.html">
-                    <div class="iphone_7_plus_img"></div>
-                    iPhone 7 Plus
-                </a>
-            </div>
-            <div class="iphone_7">
-                <a href="iphone-7.html">
-                    <div class="iphone_7_img"></div>
-                    iPhone 7
-                </a>
-            </div>
-            <div class="iphone_se">
-                <a href="iphone-se.html">
-                    <div class="iphone_se_img"></div>
-                    iPhone SE
-                </a>
-            </div>
-            <div class="iphone_6s_plus">
-                <a href="iphone-6s-plus.html">
-                    <div class="iphone_6s_plus_img"></div>
-                    iPhone 6s Plus
-                </a>
-            </div>                
-            <div class="iphone_6s">
-                <a href="iphone-6s.html">
-                    <div class="iphone_6s_img"></div>
-                    iPhone 6s
-                </a>
-            </div>                
-            <div class="iphone_6_plus">
-                <a href="iphone-6-plus.html">
-                    <div class="iphone_6_plus_img"></div>
-                    iPhone 6 Plus
-                </a>
-            </div>
-            <div class="iphone_6">
-                <a href="iphone-6.html">
-                    <div class="iphone_6_img"></div>
-                    iPhone 6
-                </a>
-            </div>
-            <div class="iphone_5c">
-                <a href="iphone-5c.html">
-                    <div class="iphone_5c_img"></div>
-                    iPhone 5c
-                </a>
-            </div>                
-            <div class="iphone_5s">
-                <a href="iphone-5s.html">
-                    <div class="iphone_5s_img"></div>
-                    iPhone 5s
-                </a>
-            </div>                
-            <div class="iphone_5">
-                <a href="iphone-5.html">
-                    <div class="iphone_5_img"></div>
-                    iPhone 5
-                </a>
-            </div>
-            <div class="iphone_4_4s">
-                <a href="iphone-4-4s.html">
-                    <div class="iphone_4_4s_img"></div>
-                    iPhone 4/iPhone 4s
+            <div class="watch_1">
+                <a href="watch-1.html">
+                    <div class="watch_1_img"></div>
+                    Apple Watch series 1
                 </a>
             </div>
         </div>
