--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <ul class="repair-apple">
                                 <li><a href="repair-apple-iphone.html">iPhone</a></li>
                                 <li><a href="repair-apple-ipad.html">iPad</a></li>
-                                <li><a href="#">Watch</a></li>
+                                <li><a href="repair-apple-watch.html">Watch</a></li>
                                 <li><a href="#">MacBook</a></li>
                             </ul>
                         </li>
@@ -102,12 +102,12 @@
     </main>
 
     <footer>
-
+        <a href="index.html"><img src="images/apple_jobs_genius.png" alt=""></a>
     </footer>
 
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
     <script src="slider.js"></script>
     <script>
         slideShow('.slider', {
