--- a/repair-apple.html
+++ b/repair-apple.html
@@ -82,7 +82,7 @@
                     </a>
                 </div>
                 <div class="repair_watch">
-                    <a href="#">
+                    <a href="repair-apple-watch.html">
                         <div class="repair_watch_img"></div>
                         Watch
                     </a>
