--- a/watch-2.html
+++ b/watch-2.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ремонт iPhone 11 Pro Max</title>
+    <title>Ремонт Apple Watch series 2</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="iphone.css">
+    <link rel="stylesheet" type="text/css" href="watch.css">
     <link href="https://fonts.googleapis.com/css?family=Jura:300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="slider.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
@@ -68,12 +68,12 @@
     </header>
 
     <main>
-        <h1>Ремонт iPhone 11 Pro Max</h1>
+        <h1>Ремонт Apple Watch series 2</h1>
         <h3>стоимость услуг по ремонту:</h3>
-        <div class="repair_iphone_11_pro_max"> 
-            <div class="iphone_11_pro_max">
-                <div class="iphone_11_pro_max_img"></div>
-                <h2>iPhone 11 Pro Max</h2>  
+        <div class="repair_watch_2"> 
+            <div class="watch_2">
+                <div class="watch_2_img"></div>
+                <h2>Apple Watch series 2</h2>  
                 <h3>наши плюсы:</h3>
                 <div class="our_pluses">
                     <div class="quality">
@@ -111,93 +111,38 @@
                         </tr>
                         <tr>
                             <td>Замена стекла</td>
-                            <td>20 мин.</td>
-                            <td>3650</td>
+                            <td>90 мин.</td>
+                            <td>1950</td>
                         </tr>
                         <tr>
                             <td>Замена дисплейного модуля Original</td>
-                            <td>20 мин.</td>
-                            <td>12200</td>
+                            <td>90 мин.</td>
+                            <td>3750</td>
                         </tr>
                         <tr>
-                            <td>Восстановление функции True Tone</td>
-                            <td>30 мин.</td>
-                            <td>уточняйте</td>
-                        </tr>
-                        <tr>
-                            <td>Замена стекла задней крышки корпуса</td>
-                            <td>1 ч.</td>
-                            <td>2850</td>
-                        </tr>
-                        <tr>
-                            <td>Стекло основной камеры</td>
-                            <td>30 мин.</td>
-                            <td>950</td>
-                        </tr>
-                        <tr>
-                            <td>Корпус Original</td>
+                            <td>3D Touch</td>
                             <td>60 мин.</td>
-                            <td>4150</td>
+                            <td>750</td>
+                        </tr>
+                        <tr>
+                            <td>Аккумулятор</td>
+                            <td>30 мин.</td>
+                            <td>650</td>
                         </tr>
                         <tr>
                             <td>Чистка после попадания влаги</td>
                             <td>от 30 мин.</td>
-                            <td>от 500</td>
+                            <td>от 150</td>
                         </tr>
                         <tr>
-                            <td>Аккумулятор</td>
-                            <td>15 мин.</td>
-                            <td>2350</td>
+                            <td>Обновление ПО</td>
+                            <td>от 10 мин.</td>
+                            <td>150</td>
                         </tr>
                         <tr>
-                            <td>Основная камера Original</td>
-                            <td>10 мин.</td>
-                            <td>3950</td>
-                        </tr>
-                        <tr>
-                            <td>Передняя камера</td>
-                            <td>20 мин.</td>
-                            <td>1350</td>
-                        </tr>
-                        <tr>
-                            <td>Датчик приближения</td>
-                            <td>30 мин.</td>
-                            <td>1050</td>
-                        </tr>
-                        <tr>
-                            <td>Слуховой динамик</td>
-                            <td>15 мин.</td>
-                            <td>750</td>
-                        </tr>
-                        <tr>
-                            <td>Ремонт кнопки Power</td>
-                            <td>30 мин.</td>
-                            <td>850</td>
-                        </tr>
-                        <tr>
-                            <td>Кнопки регулировки громкости</td>
-                            <td>30 мин.</td>
-                            <td>850</td>
-                        </tr>
-                        <tr>
-                            <td>Разъём зарядки</td>
-                            <td>30 мин.</td>
-                            <td>850</td>
-                        </tr>
-                        <tr>
-                            <td>Полифонический динамик</td>
-                            <td>15 мин.</td>
-                            <td>1150</td>
-                        </tr>
-                        <tr>
-                            <td>Микрофон</td>
-                            <td>30 мин.</td>
-                            <td>1150</td>
-                        </tr>
-                        <tr>
-                            <td>Вибро</td>
-                            <td>10 мин.</td>
-                            <td>700</td>
+                            <td>Подключение к телефону</td>
+                            <td>от 10 мин.</td>
+                            <td>50</td>
                         </tr>
                     </tbody>
                 </table>
